cititechdNew2024Jan/force-app/main/default/objects/Parent_Contract__c/Parent_Contract__c.object-meta.xml
<CustomObject>
    <description>Master Child to regular Contract. Used for specific scenarios when a Contract may involve multiple business lines that share a deposit. For example UBS</description>
    <label>Parent Contract</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parent Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>