cititechdNew2024Jan/force-app/main/default/objects/Parent_Contract__c/fields/Description_Notes__c.field-meta.xml
<CustomField>
    <fullName>Description_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description/Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>