cititechdNew2024Jan/force-app/main/default/objects/Parent_Contract__c/fields/Parent_Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Parent_Contract_Amount__c</fullName>
    <label>Parent Contract Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>