cititechdNew2024Jan/force-app/main/default/objects/Parent_Contract__c/fields/Remaining_Balance_of_Parent_Contract__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Balance_of_Parent_Contract__c</fullName>
    <formula>Parent_Contract_Amount__c -  Total_Amount_Billed_to_Child_Contracts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contract amount subtracted by the amount billed against the child contracts.</inlineHelpText>
    <label>Remaining Balance of Parent Contract</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>