cititechdNew2024Jan/force-app/main/default/objects/Parent_Contract__c/fields/Total_Orders_Related_to_Child_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Total_Orders_Related_to_Child_Contracts__c</fullName>
    <label>Total Orders Related to Child Contracts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>