cititechdNew2024Jan/force-app/main/default/objects/Parent_Contract__c/validationRules/Remaining_Balance_Never_Below_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Remaining_Balance_Never_Below_0</fullName>
    <active>true</active>
    <description>The Contract remaining balance should never be below $0</description>
    <errorConditionFormula>Remaining_Balance_of_Parent_Contract__c &lt; 0</errorConditionFormula>
    <errorMessage>The Contract remaining balance should never be below $0</errorMessage>
</ValidationRule>