cititechdNew2024Jan/force-app/main/default/objects/Parent_Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Remaining_Balance_of_Parent_Contract__c</columns>
    <columns>Total_Amount_Billed_to_Child_Contracts__c</columns>
    <columns>Total_Amount_Queued_to_Child_Contracts__c</columns>
    <columns>Total_Orders_Related_to_Child_Contracts__c</columns>
    <columns>Total_Related_Child_Contracts__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Parent Contracts</label>
</ListView>